# home-automation-config

./: .env  .gitignore  Makefile.toml  README.md  codecov.yml  docker-compose.yml
.github/: ci.yml
.github/workflows/: ci.yml  security-audit.yml
server/: .env  .test.env  Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yaml
server/src/: config.rs  db.rs  influxdb.rs  influxdb_pool.rs  lib.rs  main.rs  schema_graphql.rs
server/src/handlers/: error.rs  graphql.rs  health.rs  mod.rs
server/src/models/: errors.rs  health.rs  key.rs  mod.rs  thermostat_command.rs  thermostat_status.rs
server/tests/: test_health.rs  test_key.rs  test_set_thermostat_status.rs  test_thermostat_status.rs  test_thermostat_status_history.rs
server/tests/common/: app.rs
