[package]
name = "home-automation-sensors-config"
version = "0.2.0"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# misc
futures = "0.3.5"
dotenv = "0.15.0"
chrono = { version = "0.4.15", features = ["serde"] }

# web server
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-cors = "0.2.0"
env_logger = "0.7.1"

# postgres
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"

# influxdb
influxdb = { version = "0.1.0", features = ["derive"] }
r2d2 = "0.8.9"
r2d2-influxdb = "0.1.0"

# graphql
juniper = "0.14.2"
serde = {version = "1.0.115", features=["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
thiserror = "1.0.20"

[dev-dependencies]
actix-http = "1.0.1"
serial_test = "*"
