[package]
name = "home-automation-sensors-config"
version = "0.2.0"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# misc
futures = "0.3.12"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }

# web server
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-cors = "0.5.4"
env_logger = "0.8.2"

# postgres
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"

# influxdb
influxdb = { version = "0.3.0", features = ["derive"] }
r2d2 = "0.8.9"
r2d2-influxdb = "0.1.0"

# graphql
juniper = "0.15.3"
serde = {version = "1.0.123", features=["derive"] }
serde_json = "1.0.61"
anyhow = "1.0.38"
thiserror = "1.0.23"

[dev-dependencies]
actix-http = "2.2.0"
serial_test = "*"
