[package]
name = "home-automation-sensors-config"
version = "0.2.0"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# misc
futures = "0.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# web server
actix-web = "3.3"
actix-rt = "1.1"
actix-cors = "0.5"
env_logger = "0.8"

# postgres
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }

# influxdb
influxdb = { version = "0.4", features = ["derive"] }
bb8 = "0.5"

# graphql
juniper = "0.15"
serde = {version = "1.0", features=["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
actix-http = "2.2"
serial_test = "0.5"
